[package]
name = "pacman"
version = "0.1.0"
authors = ["plot <plotnus@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = "*"
piston = "0.42.0"
piston_window = "*"
rand = "0.6.5"
cgmath = "0.17.0"

[[bin]]
# p is for piston - this is a personal project so w.e.
name = "p"
path = "src/main-piston.rs"

[[bin]]
# s is for sdl2 - this is a personal project so w.e.
name = "s"
path = "src/main-sdl2.rs"

