[package]
name = "pacman"
version = "0.1.0"
authors = ["plot <plotnus@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
cgmath = "0.17.0"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]


[[bin]]
name = "s"
path = "src/main-sdl2.rs"

[[bin]]
# gl - is for openGL this is for practice with a rendering context
name = "gl"
path = "src/main-gl.rs"

